Seguridad para profesor desabilitado

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -14,6 +14,6 @@
 	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/><br/>
 	<h:link value="Coordinador" outcome="/coordinador/dashboard.xhtml"/><br/>
 	<h:link value="Alumno" outcome="/alumno/dashboard.xhtml"/><br/>
-	<h:link value="Profesor" outcome="profesor"/>
+	<h:link value="Profesor" outcome="/profesor/dashboard.xhtml"/><br/>
 </h:body>
 </html>
