--- a/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
@@ -26,7 +26,7 @@
                             <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="40" alt=""/></h:link></li>
                             <li uk-tooltip="title: #{alumno['for.all.views.activity']}; pos: right" ><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="40" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['for.all.views.glossary']}; pos: right" class="uk-active"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg" width="40" alt="" /></h:link></li>
-                            <li uk-tooltip="title: Indefinido; pos: right" ><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="40" alt="" /></h:link></li>
+                            <li uk-tooltip="title: #{alumno['for.all.views.practices']}; pos: right" ><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="40" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['for.all.views.mind.map']}; pos: right"><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg" width="40" height="" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['for.all.views.library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg" width="40" alt="" /></h:link></li>
                         </ul>
@@ -66,7 +66,7 @@
                 <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.activity']}; pos: right"><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.glossary']}; pos: right" class="uk-active"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg" width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></h:link></li>
+                <li uk-tooltip="title: #{alumno['for.all.views.practices']}; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.mind.map']}; pos: right"><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg" width="80" height="" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg" width="80" alt="" /></h:link></li>
             </ul>
@@ -76,7 +76,7 @@
                 <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.activity']}; pos: right"><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="50" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.glossary']}; pos: right" class="uk-active"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg" width="50" alt="" /></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt="" /></h:link></li>
+                <li uk-tooltip="title: #{alumno['for.all.views.practices']}; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.mind.map']}; pos: right" ><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg" width="50" height="" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg" width="50" alt="" /></h:link></li>
             </ul>
