estilos al card de videos

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -117,7 +117,7 @@
 
                                 <div style="" class="uk-card-footer uk-text-center">
                                     <h:form styleClass="">
-                                        <h:commandButton styleClass="boton" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="#{boton['homework']}"/>
+                                        <h:commandButton styleClass="boton" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="assignment"/>
                                     </h:form>
                                 </div>
                             </div>
