--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -50,7 +50,7 @@
 								</div>
 							</div>
 							<h:link  outcome="/alumno/dashboard.xhtml">
-								<button>ingresar</button>
+								<button>Login Students</button>
 							</h:link>
 						</div>
 					</div>
@@ -65,7 +65,7 @@
 								<h:graphicImage  pt:uk-tooltip="title: Teachers" library="img" name="/mounstro/3ojos.svg"  alt="alumnos"/>
 							</div>
 							<h:link  outcome="/profesor/dashboard.xhtml">
-								<button>ingresar</button>
+								<button>Login Teachers</button>
 							</h:link>
 						</div>
 					</div>
