--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -158,7 +158,7 @@
                     <div class="barra-modal"></div>
                     <div class="uk-modal-body">
                         <div class="uk-margin">
-                            <div class="uk-grid-small uk-grid" uk-grid="">
+                            <div class="uk-grid-small uk-flex-center uk-grid" uk-grid="">
                                 <div class="uk-width-1-1@s uk-width-1-5@m ">
                                     <h:outputLabel for="input-nick" styleClass="uk-text-capitalize uk-form-label" value="nick"/>
                                     <div class="uk-form-controls">
@@ -223,6 +223,7 @@
                                     </h:inputText>
                                     <h:message for="fecha-nacimiento" styleClass="uk-alert-danger"/>
                                 </div>
+
                                 <div class="uk-width-1-1@s uk-width-1-5@m">
                                     <h:outputLabel for="seleccion-nivel-lenguaje" styleClass="uk-text-capitalize uk-form-label" value="nivel lenguaje"/>
                                     <h:selectOneMenu id="seleccion-nivel-lenguaje" styleClass="selector" value="#{grupoAlumnoControlador.alumnoModelo.nivelLenguajeModelo.clave}">
@@ -236,7 +237,7 @@
                                     <h:message for="seleccion-nivel-lenguaje" styleClass="uk-alert-danger"/>
                                 </div>
                                 <div class="uk-width-1-1@s uk-width-1-5@m">
-                                    <h:outputLabel for="seleccion-sexo" styleClass="uk-text-capitalize uk-form-label" value="nivel lenguaje"/>
+                                    <h:outputLabel for="seleccion-sexo" styleClass="uk-text-capitalize uk-form-label" value="genero"/>
                                     <h:selectOneMenu id="seleccion-sexo" styleClass="selector" value="#{grupoAlumnoControlador.alumnoModelo.sexo}">
                                         <f:selectItem itemValue="#{null}" itemLabel="#{etiqueta['select']}" noSelectionOption="true"/>
                                         <f:selectItem itemValue="m" itemLabel="Masculino"/>
@@ -245,6 +246,7 @@
                                     </h:selectOneMenu>
                                     <h:message for="seleccion-sexo" styleClass="uk-alert-danger"/>
                                 </div>
+
                                 <div class="uk-width-1-1@s">
                                     <c:forEach begin="1" end="28" var="indice">
                                         <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
