Cuando agrega un usuario, la tabla se actualiza

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -271,7 +271,7 @@
                             <f:ajax onevent="function cerrar(data) { cierraModal(data,'modalAgregarAlumno'); seleccionContrasenia(data); }"
                                     listener="#{grupoAlumnoControlador.insertaAlumno}"
                                     execute="@form"
-                                    render="@form formulario-tabla-alumnotabla-alumno tabla-vacia"/>
+                                    render="@form formulario-tabla-alumno tabla-vacia"/>
                         </h:commandButton>
                     </div>
                 </h:form>
