--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -246,7 +246,10 @@
                                     </h:selectOneMenu>
                                     <h:message for="seleccion-sexo" styleClass="uk-alert-danger"/>
                                 </div>
-
+                                <div class="uk-width-1-1@s uk-width-1-5@m">
+                                    <h:outputLabel for="seleccion-sexo" styleClass="uk-text-capitalize uk-form-label" value="lugares disponibles"/>
+                                    <progress value="25" max="250"></progress>
+                                </div>
                                 <div class="uk-width-1-1@s">
                                     <c:forEach begin="1" end="28" var="indice">
                                         <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
